# stock_monitoring

./: .ai-rules.md  .aiignore  .claude.md  .dockerignore  .env.backtest  .env.dev  .env.dev.example  .env.example  .env.local.example  .env.prod  .env.prod.example  .env.schema.yaml  .env.template  .env.test  .gemini.md  .gitignore  BACKLOG.md  CHANGELOG-2026-01-19.md  Dockerfile  Makefile  README.md  analyze_jan5.py  check_all_time.py  check_db.py  check_jan8.py  check_ticks_db.py  check_today_kr.py  check_today_market.py  check_us_jan8.py  convert_spec.py  debug_kis.py  implementation_plan.md  kiwoom_tr_validation_results.json  mock_api_server.py  pyproject.toml  quick_ui_check.sh  reference-rules.md  session_review_2026-01-17.md  specs_files.txt  src_files.txt  (+15 more)
.temp_venv/: pyvenv.cfg
configs/: api_hub_v2.yaml  backtest_config.yaml  base.yaml  collection_strategy.yaml  kr_symbols.yaml  market_symbols.yaml  sentinel_config.yaml  us_symbols.yaml
data/: market_data.duckdb  test_market_data.duckdb
deploy/: crontab.conf  docker-compose.backtest.yml  docker-compose.local.yml  docker-compose.yml  schema_v2_metadata.sql
desktop-app/: README.md  index.html  main.js  package-lock.json  package.json  renderer.js  styles.css
docs/: BACKLOG.md  KNOWN_ISSUES.md  README.md  architecture_design.md  data_acquisition_strategy.md  data_management_strategy.md  data_schema.md  gap_analysis_report.md  gap_analysis_report_2026-01-21.md  gap_analysis_report_2026-01-28.md  grand_strategy.md  kis_api_check_guide.md  kis_integration_guide.md  project_context.md  security_guidelines.md  ui_design_master.md  worktree_guide.md  국내주식 실시간호가 (KRX) [실시간-004].xlsx
experiments/: README.md
migrations/: 000_baseline_prod_schema.sql  001_create_market_ticks.sql  002_create_market_orderbook.sql  003_add_timestamp_layers.sql  README.md  (+7 more)
(+773 files in other folders)
